--- a/proportal/src/css/proportal.css
+++ b/proportal/src/css/proportal.css
@@ -372,14 +372,14 @@ article {
     clear: both; }
 
 @media only screen and (max-width: 479px) {
-  #about, #user-guide, #news, .content {
+  #about, #user-guide, #news, .content, #tool-input__section, #tool-info__section {
     width: 100%;
     padding: 0; } }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   #about {
     width: 100%; }
-  #user-guide, #news {
+  #user-guide, #news, #tool-input__section, #tool-info__section {
     width: 50%;
     float: left; } }
 
@@ -407,6 +407,11 @@ article {
     width: 33.3%;
     float: right;
     padding-left: 0.75rem;
+    margin-bottom: 1.5rem; }
+  #tool-input__section, #tool-info__section {
+    float: left;
+    width: 50%;
+    padding: 0 0.75rem;
     margin-bottom: 1.5rem; } }
 
 /* partials/headers */
