--- a/proportal/views/inc/header_old.tt
+++ b/proportal/views/inc/header_old.tt
@@ -1,9 +1,5 @@
 <header role="banner" class="cf">
-    <a id="jgi-logo" href="[% settings.base_url %]" class="img">
-    	<img src="[% settings.pp_assets %]images/logo-proportal.png" alt="DOE Joint Genome Institute's IMG ProPortal logo" />
-    </a>
-    
-    
+    <a id="jgi-logo" href="[% settings.base_url %]" class="img"><img src="[% settings.pp_assets %]images/logo-proportal.png" alt="DOE Joint Genome Institute's IMG ProPortal logo" /></a>
     <ul class="user-links">
 [%	IF settings.sso_enabled;
 		IF session && session.name %]
