--- a/proportal/views/pages/datamart_stats.tt
+++ b/proportal/views/pages/datamart_stats.tt
@@ -5,17 +5,27 @@
 <h2>API</h2>
 
 <p>Welcome to the experimental ProPortal API. The following queries are currently available as JSON downloads; please note that not all subsets are available for each query but at present the UI does not reflect that.</p>
+[%	USE Dumper;
+	Dumper.dump( valid ); %]
 
 <ul>
 [%	FOREACH q IN queries.sort %]
 	<li><a href="/api/proportal/[% q %]">[% q %]</a>
 		<ul>
-[%		FOREACH s IN subsets %]
+[%		FOREACH s IN subsets; %]
+			<li>subset: <a href="/api/proportal/[% q %]/[% s %]">[% s %]</a></li>
+[%		END; %]
+		</ul>
+	</li>
+[%	END %]
+[%	FOREACH q IN valid_filters.keys.sort %]
+	<li><a href="/api/proportal/[% q %]">[% q %]</a>
+		<ul>
+[%		FOREACH s IN valid_filters.$q.subset.enum; %]
 			<li>subset: <a href="/api/proportal/[% q %]/[% s %]">[% s %]</a></li>
 [%		END; %]
 		</ul>
 	</li>
 [%	END %]
 </ul>
-
 [% END %]
